# plover_canon

./: LICENSE  README.md  plover_canon.py  setup.cfg
