[metadata]
name = plover-canon
version = 0.1.0
keywords = plover plover_plugin
description = Plays Pachelbel's Canon based on stroke speed
author =  plants
author_email =  greenwyrt@gmail.com
license = MIT
[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
  musicpy
py_modules =
  plover_canon
[options.entry_points]
  plover.extension =
    play_canon = plover_canon:play_canon